--- a/Paginas/about me.html
+++ b/Paginas/about me.html
@@ -50,15 +50,21 @@
     
         <h2>A little bit about myself...</h2>
         <h5> "Looking for my own and my teammates progress always" </h5>
-        <div class="cv-conteiner"> 
-             <object data="..//archivos/cv eng.pdf" height="1000" width="700"></object> 
-            <object data="..//archivos/cvesp.pdf" height="1000" width="700"></object>
-        </div>
-  
-        <div class="galeria-conteiner"> 
-        <img src="../img/data.jpeg" alt="">
-        <img src="../img/cursoproject.jpeg" alt="">
-        </div>
+        <div class="cv-conteiner"> <object data="..//archivos/cv eng.pdf" height="1000" width="700"></object> </div>
+        <div class="galeria-conteiner">
+            <img src="../img/data.jpeg"
+                 alt="Diploma Data Analytics"
+                 width="600"
+                 height="500">
+            <p>Diploma Curso Data Analytics - CoderHouse.</p>
+          </div>
+          <div class="galeria-conteiner">
+            <img src="../img/cursoproject.jpeg"
+                 alt="Diploma Project Manager"
+                 width="600"
+                 height="500">
+            <p>Diploma Curso Project Management - BBVA Academy.</p>
+          </div>
         
 </section>
     </main>
