--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <nav class="navbar navbar-expand-lg" data-bs-theme= "dark">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#"><img src="/img/logo.png" height="80" width="80" alt=""></a>
+                  <a class="navbar-brand" href="#"><img src="./img/logo.png" height="80" width="80" alt=""></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
@@ -49,7 +49,7 @@
         <h4>Welcome to my website, as myself this is under construction, come back soon and you'll see the everyday progress.</h4>
         
         <div class="photo-container">
-        <img src="../img/fotomadrid.png" alt="centrar foto" height="400" width= "250">
+        <img src="./img/fotomadrid.png" alt="centrar foto" height="400" width= "250">
         </div>  
         
 
