--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./estilos/style.css">
+    <link rel="stylesheet" href="./sass/style.css">
     <title>Sebastián Pujol - My Web</title>
+    <meta name="description" content="Pagina Web perteneciente a Sebastián Pujol, usada para fines laborales">
+    <meta name="keywords" content="Sebastian, Pujol, web, programacion, desarollo, proyectos, biografia">
 </head>
 <body>
     <header>
-
         <nav>
             <nav class="navbar navbar-expand-lg" data-bs-theme= "dark">
                 <div class="container-fluid">
@@ -49,7 +50,7 @@
         <h4>Welcome to my website, as myself this is under construction, come back soon and you'll see the everyday progress.</h4>
         
         <div class="photo-container">
-        <img src="./img/fotomadrid.png" alt="centrar foto" height="400" width= "250">
+        <img src="./img/fotomadrid.png" alt="Madrid" height="400" width= "250">
         </div>  
         
 
