--- a/Paginas/contact.html
+++ b/Paginas/contact.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
-	<link rel="stylesheet" href="../estilos/style.css">
+	<link rel="stylesheet" href="../sass/style.css">
+	<title>Contact</title>
+	<meta name="description" content="Formulario de contacto de Sebastián Pujol">
+    <meta name="keywords" content="Sebastian, Pujol, web, programacion, desarollo, proyectos, biografia">
 </head>
 <body>
 
@@ -31,7 +34,7 @@
                         <a class="nav-link" href="../Paginas/projects.html">Projects</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="./Paginas/contact.html">Contact</a>
+                        <a class="nav-link" href="/Paginas/contact.html">Contact</a>
                       </li>
                       <li class="nav-item">
                         <a class="nav-link" href="../Paginas/leisure.html">Leisure</a>
