--- a/Paginas/leisure.html
+++ b/Paginas/leisure.html
@@ -17,7 +17,7 @@
         <nav>
             <nav class="navbar navbar-expand-lg" data-bs-theme= "dark">
                 <div class="container-fluid">
-                  <a class="navbar-brand" href="#"><img src="/img/logo.png" height="80" width="80" alt=""></a>
+                  <a class="navbar-brand" href="#"><img src="./img/logo.png" height="80" width="80" alt=""></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>
